# btc_bot_framework

./: .flake8  LICENSE  README.md  setup.cfg  setup.py
botfw/: __init__.py  base.py
botfw/base/: __init__.py  api.py  exchange.py  factory.py  order.py  order_simulator.py  orderbook.py  trade.py  websocket.py
botfw/binance/: __init__.py  api.py  exchange.py  factory.py  order.py  orderbook.py  trade.py  websocket.py  websocket_user_data.py
botfw/bitbank/: api.py  exchange.py  order.py  orderbook.py  trade.py  websocket.py
botfw/bitflyer/: __init__.py  api.py  api_web.py  exchange.py  factory.py  order.py  orderbook.py  trade.py  websocket.py
botfw/bitmex/: __init__.py  api.py  exchange.py  factory.py  order.py  orderbook.py  trade.py  websocket.py
botfw/bybit/: api.py  api_ccxt.py  exchange.py  order.py  orderbook.py  trade.py  websocket.py
botfw/etc/: aes.py  cmd.py  loader.py  trade_proxy.py  util.py
botfw/gmocoin/: api.py  api_ccxt.py  exchange.py  order.py  orderbook.py  trade.py  websocket.py
botfw/liquid/: api.py  exchange.py  jwt.py  order.py  orderbook.py  trade.py  websocket.py
samples/: simple_bot.py
samples/binance/: orderbook.py  trade.py
samples/bitbank/: orderbook.py  trade.py
samples/bitflyer/: orderbook.py  position_pnl.py  simple_example_bot.py  trade.py
samples/bitmex/: orderbook.py  position_pnl.py  simple_example_bot.py  trade.py
samples/bmocoin/: orderbook.py
samples/bybit/: orderbook.py  trade.py
samples/etc/: cmd.py  crypt.py  position_pnl1.py  position_pnl2.py  position_pnl_1.py  subscribe.py  (+2 more)
test/: decimal_add.py
(+3 files in other folders)
