[metadata]
name = botfw 
version = 0.5.0
description = cryptocurrency bot framework 
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
packages = find:

[options.packages.find]
exclude =
  test
  samples

